--- a/dev/css/main.css
+++ b/dev/css/main.css
@@ -88,83 +88,101 @@ textarea {
   width: 100%;
   height: 200vh; }
   .content .welcome-sector {
-    position: absolute;
+    position: relative;
     top: 0;
     left: 0;
     height: 100vh;
     width: 100%;
     background-color: #2b2b2b;
-    padding: 20vh 0 0 0;
-    max-width: 1024px; }
-    .content .welcome-sector .welcome-sector__bg,
-    .content .welcome-sector .welcome-sector__bg-split,
-    .content .welcome-sector .welcome-sector__bg-particle {
+    padding: 20vh 0 0 0; }
+    .content .welcome-sector .comeson {
+      position: relative;
+      height: 100vh;
+      width: 100%;
+      z-index: 3;
+      max-width: 1024px; }
+      .content .welcome-sector .comeson > * {
+        margin-bottom: 3px; }
+    .content .welcome-sector__bg, .content .welcome-sector__bg-split, .content .welcome-sector__bg-particle {
       position: absolute;
       top: 0;
       left: 0;
       width: 100%;
-      height: 120vh;
-      margin-top: -100px; }
-    .content .welcome-sector .annie {
-      background: #2b2b2b url("../img/annie.jpg") no-repeat fixed padding-box center right 42%/contain;
-      z-index: -4; }
-    .content .welcome-sector .annie--char {
-      background: url("../img/annie_char.png") no-repeat fixed padding-box center right 42%/contain;
-      z-index: -1; }
-    .content .welcome-sector #particles-js {
-      z-index: -3; }
-    .content .welcome-sector .welcome-sector__heading,
-    .content .welcome-sector .welcome-sector__caption,
-    .content .welcome-sector .welcome-sector__logo {
+      height: 120vh; }
+    .content .welcome-sector__bg {
+      background: #2b2b2b url("../img/annie.jpg") no-repeat fixed padding-box center right 42%/cover;
+      z-index: 1; }
+    .content .welcome-sector__bg-split {
+      background: url("../img/annie_char.png") no-repeat fixed padding-box center right 42%/cover;
+      margin-bottom: 150px;
+      z-index: 2; }
+    .content .welcome-sector__bg-particle {
+      z-index: 2; }
+    .content .welcome-sector__heading, .content .welcome-sector__caption, .content .welcome-sector__logo {
       text-align: center;
       color: #d2faff;
       font-family: "Moon 2.0 Light"; }
-    .content .welcome-sector .welcome-sector__logo {
+    .content .welcome-sector__logo {
       mix-blend-mode: hard-light; }
-    .content .welcome-sector .welcome-sector__heading {
+    .content .welcome-sector__heading {
       font-size: 4.5em;
       mix-blend-mode: color-dodge; }
-    .content .welcome-sector .welcome-sector__caption {
+    .content .welcome-sector__caption {
       font-size: 2em;
       mix-blend-mode: color-dodge; }
-    .content .welcome-sector .welcome-sector__entry-btn {
+    .content .welcome-sector__entry-btn {
       padding: 75px 0 0 0;
       text-align: center;
       overflow: hidden; }
-    .content .welcome-sector .welcome-sector__entry-btn__svg {
+    .content .welcome-sector__entry-btn__svg {
       float: none;
-      height: 10em;
+      width: 150px;
+      margin-bottom: 50px;
       mix-blend-mode: hard-light; }
-    .content .welcome-sector .welcome-sector__entry-btn__caption {
+    .content .welcome-sector__entry-btn__caption {
       font-size: 2em;
       text-align: center;
-      margin-top: -89px;
-      margin-bottom: 100px;
+      margin: -130px 0 40px 0;
       mix-blend-mode: color-dodge;
       color: #b9c8ff; }
     @media (max-width: 600px) {
-      .content .welcome-sector .welcome-sector {
+      .content .welcome-sector {
         padding: 10vh 0 0 0; }
-      .content .welcome-sector .welcome-sector__entry-btn {
+      .content .welcome-sector__entry-btn {
         padding: 100px 0 0 0; } }
   .content .label1 {
-    z-index: -2;
+    z-index: 1;
     position: absolute;
     top: 100vh;
-    margin-top: -200px;
-    height: 500px;
+    margin-top: -100px;
+    height: 100vw;
     width: 100%;
     background-color: #b3d4fc;
     transform: skewY(-20deg); }
   .content .intro {
     position: absolute;
+    z-index: 5;
     top: 100vh;
     left: 0;
     width: 100%;
-    height: 100vh;
-    transform: skewY(10deg);
+    height: 150vh;
+    transform: skew(0, 10deg);
     background-color: #7599ff;
-    margin-top: -100px; }
+    margin-top: -5vh; }
+    .content .intro > * {
+      transform: skew(0, -10deg); }
+    .content .intro .produce {
+      margin-top: 300px;
+      width: 100%;
+      position: absolute;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-around;
+      align-items: center;
+      align-content: center; }
+      .content .intro .produce__lol, .content .intro .produce__pubg {
+        width: 300px;
+        margin: 20px 20px 20px 20px; }
 
 /* ==========================================================================
    Helper classes
@@ -262,7 +280,7 @@ textarea {
     background: transparent !important;
     color: #000 !important;
     /* Black prints faster:
-           http://www.sanbeiji.com/archives/953 */
+                               http://www.sanbeiji.com/archives/953 */
     box-shadow: none !important;
     text-shadow: none !important; }
 
@@ -276,10 +294,10 @@ textarea {
   abbr[title]:after {
     content: " (" attr(title) ")"; }
 
-  /*
-   * Don't show links that are fragment identifiers,
-   * or use the `javascript:` pseudo protocol
-   */
+ /*
+* Don't show links that are fragment identifiers,
+* or use the `javascript:` pseudo protocol
+*/
   a[href^="#"]:after,
   a[href^="javascript:"]:after {
     content: ""; }
@@ -292,10 +310,10 @@ textarea {
     border: 1px solid #999;
     page-break-inside: avoid; }
 
-  /*
-   * Printing Tables:
-   * http://css-discuss.incutio.com/wiki/Printing_Tables
-   */
+ /*
+* Printing Tables:
+* http://css-discuss.incutio.com/wiki/Printing_Tables
+*/
   thead {
     display: table-header-group; }
 
