--- a/dev/css/main.css
+++ b/dev/css/main.css
@@ -121,7 +121,7 @@ textarea {
     .content .welcome-sector__heading, .content .welcome-sector__caption, .content .welcome-sector__logo {
       text-align: center;
       color: #d2faff;
-      font-family: "Moon 2.0 Light"; }
+      font-family: 'Moon 2.0 Light','Sawarabi Mincho'; }
     .content .welcome-sector__logo {
       mix-blend-mode: hard-light; }
     .content .welcome-sector__heading {
@@ -144,7 +144,8 @@ textarea {
       text-align: center;
       margin: -130px 0 40px 0;
       mix-blend-mode: color-dodge;
-      color: #b9c8ff; }
+      color: #b9c8ff;
+      font-family: 'Moon 2.0 Light','Sawarabi Mincho'; }
     @media (max-width: 600px) {
       .content .welcome-sector {
         padding: 10vh 0 0 0; }
@@ -172,8 +173,9 @@ textarea {
     .content .intro > * {
       transform: skew(0, -10deg); }
     .content .intro .produce {
-      margin-top: 300px;
+      margin-top: 15vh;
       width: 100%;
+      height: 100vh;
       position: absolute;
       display: flex;
       flex-wrap: wrap;
@@ -181,8 +183,17 @@ textarea {
       align-items: center;
       align-content: center; }
       .content .intro .produce__lol, .content .intro .produce__pubg {
-        width: 300px;
-        margin: 20px 20px 20px 20px; }
+        display: flex;
+        width: auto;
+        margin: -500px 20px 20px 20px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center; }
+        .content .intro .produce__lol__caption, .content .intro .produce__pubg__caption {
+          color: #ffffff;
+          margin: 20px 20px 20px 20px;
+          font-size: 1.5rem;
+          font-family: 'Moon 2.0 Light','Sawarabi Mincho',monospace; }
 
 /* ==========================================================================
    Helper classes
