--- a/dev/css/main.scss
+++ b/dev/css/main.scss
@@ -154,7 +154,7 @@ textarea {
         &__logo {
             text-align: center;
             color: #d2faff;
-            font-family: "Moon 2.0 Light";
+            font-family: 'Moon 2.0 Light','Sawarabi Mincho';
         }
         &__logo {
             mix-blend-mode: hard-light;
@@ -185,6 +185,7 @@ textarea {
             margin: -130px 0 40px 0;
             mix-blend-mode: color-dodge;
             color: #b9c8ff;
+            font-family: 'Moon 2.0 Light','Sawarabi Mincho';
         }
         @media (max-width: 600px) {
             &__logo {}
@@ -221,8 +222,9 @@ textarea {
             transform: skew(0,-10deg);
         }
         .produce{
-            margin-top: 300px;
+            margin-top: 15vh;
             width: 100%;
+            height: 100vh;
             position: absolute;
             display: flex;
             flex-wrap:wrap;
@@ -230,8 +232,18 @@ textarea {
             align-items:center;
             align-content:center;
             &__lol,&__pubg{
-                width: 300px;
-                margin: 20px 20px 20px 20px;
+                display: flex;
+                width: auto;
+                margin: -500px 20px 20px 20px;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                &__caption{
+                    color: #ffffff;
+                    margin: 20px 20px 20px 20px;
+                    font-size: 1.5rem;
+                    font-family: 'Moon 2.0 Light','Sawarabi Mincho',monospace;
+                }
             }
         }
     }
